refactor: improve report generation and error handling in reportController and ClassReportService and remove unnecessary end points
